--- a/js-objects.html
+++ b/js-objects.html
@@ -17,5 +17,16 @@
 <body>
 	
 	<h1 id="main-heading">Introduction to JavaScript Objects</h1>
+	<script>
+		let myObject = {
+			name: 'Bob', 
+			age: 24,
+			alive: true,
+			favFood: ['Pizza', 'Popcorn', 'Ice Cream']
+		}
+
+	</script>
+
+
 </body>
 </html>
